[gd_scene load_steps=17 format=2]

[ext_resource path="res://Images/Background.png" type="Texture" id=1]
[ext_resource path="res://Font/DroidSans-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://JoinServer/JoinServerControl.gd" type="Script" id=3]
[ext_resource path="res://JoinServer/Loading.tscn" type="PackedScene" id=4]
[ext_resource path="res://JoinServer/Message.tscn" type="PackedScene" id=5]
[ext_resource path="res://Font/DroidSans.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Font/Arial Rounded Bold.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=6]
size = 132
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )
Fonts/fonts/normal = SubResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 7 )

[node name="JoinServerControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundTextureRect" type="TextureRect" parent="."]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -276.5
margin_top = -79.5
margin_right = 276.5
margin_bottom = 79.5
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
shortcut_in_tooltip = false
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeSceneTween" type="Tween" parent="."]

[node name="ConnectingTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Loading" parent="." instance=ExtResource( 4 )]

[node name="CancelButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -276.5
margin_top = -79.5
margin_right = 276.5
margin_bottom = 79.5
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
shortcut_in_tooltip = false
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" parent="." instance=ExtResource( 5 )]

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -585.5
margin_top = -294.5
margin_right = 585.5
margin_bottom = 294.5
theme = SubResource( 9 )
window_title = "Welcome to RaceKombat!"

[node name="RichTextLabel" type="RichTextLabel" parent="ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
custom_fonts/normal_font = SubResource( 7 )
text = "Welcome to RaceKombat's gamepad! To play, you will need the RaceKombat game downloaded in your PC, which can be downloaded from

 https://github.com/codemonsters/racekombat/releases"

[connection signal="pressed" from="ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="tween_all_completed" from="ChangeSceneTween" to="." method="_on_ChangeSceneTween_tween_all_completed"]
[connection signal="timeout" from="ConnectingTimer" to="." method="_on_ConnectingTimer_timeout"]
[connection signal="pressed" from="CancelButton" to="." method="_on_CancelButton_pressed"]
